# struct4py

./: README.md  pyproject.toml
.github/workflows/: testing.yml
examples/: example.py  example_allow_override.py  example_not_allow_override.py
struct4py/: struct.py
test/: test_basic_usage.py
