[tool.poetry]
name = "struct4py"
version = "0.1.0"
description = "Matlab like structure for python, allowing for fast and easy indexing"
authors = ["ahartlba <you@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ahartlba/struct4py"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
